# car_price_predictor

./: LinearRegModel.pkl  README.md  app.py  main.py  pyproject.toml  quikrPredictor.ipynb
templates/: index.html
